# glucose

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: lib.rs  mat.rs  traits.rs  util.rs  vec.rs
src/algebra/linear/: bivec.rs  dynamic.rs  mat.rs  mod.rs  prelude.rs  rotor.rs  scalar.rs  storage.rs  vec.rs
src/algebra/linear/mat/: mat.rs  mod.rs  set.rs
src/group_theory/: extended_euclidean_algorithm.rs  groups.rs  mod.rs  primes.rs
src/impls/: bytemuck.rs  mint.rs  mod.rs  serde.rs
src/linear/: bivec.rs  dynamic.rs  mat.rs  mod.rs  rotor.rs  scalar.rs  vec.rs
src/linear/fast_impls/: vec.rs
src/linear/specific_impls/: mat.rs  mod.rs  vec.rs
src/number_theory/: euclid.rs  find.rs  mod.rs  prime.rs
src/numeric/: bit.rs  cmp.rs  float.rs  identity.rs  int.rs  mod.rs  mul_add.rs  num.rs  pow.rs  sign.rs  trig.rs  util.rs
src/specialized/algebra/: vec.rs
