[package]
name = "glucose"
version = "0.2.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/TriedWorks/glucose"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
publish = true
description = "multipurpose math and physics crate for my projects"

[lib]
name = "glucose"
path = "src/lib.rs"

# TODO: use those features for conditional modules
[features]
default = ["linear"]
full = ["linear-full", "theory", "serde", "bytemuck"]
linear-full = ["linear", "specialized"]
linear = []
specialized = ["linear"]
theory = []

[dependencies]
paste = "1.0.4"
fructose = "0.2.0"
bytemuck = { version = "1.5.1", optional = true }
serde = { version = "1.0.123", optional = true }
serde_test = "1.0.123"