[package]
name = "glucose"
version = "0.2.3"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/TriedWorks/glucose"
categories = ["mathematics", "science"]
keywords = ["math", "mathematics", "science", "physics"]
publish = true
description = "multipurpose math and physics crate for my projects"

[lib]
name = "glucose"
path = "src/lib.rs"

[features]
default = ["full"]
full-extras = ["full", "bytemuck", "mint"]
full = ["algebra", "groups", "analysis"]
algebra = []
groups = []
analysis = []

[dependencies]
paste = "1.0.5"
fructose = { version = "0.3", path = "../fructose" }
#fructose = "0.3.8"
bytemuck = { version = "1.5.1", optional = true }
mint = { version = "0.5.6", optional = true }